fixed links and front page

--- a/about.html
+++ b/about.html
@@ -1,18 +1,23 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>About</title>
-  <meta name="description" content="About us">
-  <meta name="author" content="UES">
+    <title>Western UES</title>
+    <meta name="description" content="Western UES">
+    <meta name="author" content="UES">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
+    
+
 </body>
 </html>
