--- a/index.html
+++ b/index.html
@@ -21,25 +21,26 @@
     <!-- MENU -->
     <div class="menu-container">
         <ol>
-            <img src="img/logo.png" class="menu-image">
-
+            <a href="/"><img src="img/logo.png" class="menu-image"></a>
             <div class="menu-items">
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./events.html">Events</a></li>
-                <li><a href="./join.html">Join Us</a></li>
-                <li><a href="./store.html">Store</a></li>
-                <li><a href="./spaces.html">Spaces</a></li>
-                <li><a href="./clubs.html">Clubs</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/events">Events</a></li>
+                <li><a href="/join">Join Us</a></li>
+                <li><a href="/store">Store</a></li>
+                <li><a href="/spaces">Spaces</a></li>
+                <li><a href="/clubs">Clubs</a></li>
                 <li>Committees</li>
             </div>
         </ol>
     </div>
 
     <!-- ALERT -->
-    <div class="alert"><a href="https://www.eng.uwo.ca/Engineering-COVID-19-FAQ.html" style="text-decoration: none;color:white;">Learn more about COVID-19</a><span class="close"></span></div>
+    <div class="alert"><a href="https://www.eng.uwo.ca/Engineering-COVID-19-FAQ.html"
+            style="text-decoration: none;color:white;">Learn more about COVID-19</a><span class="close"></span></div>
 
     <!-- CAROUSEL -->
     <div class="main-carousel">
+
         <div class="slide slide1" id="slide1">
             <div class="slide-text">
                 <div class="slide-text-title">
@@ -51,7 +52,39 @@
             </div>
         </div>
 
+        <div class="slide slide2" id="slide2">
+            <div class="slide-text">
+                <div class="slide-text-title">
+                    Western Engineering Undergraduate Society
+                </div>
+                <div class="slide-text-description">
+                    Creating the best engineering experience possible.
+                </div>
+            </div>
+        </div>
+
+        <div class="slide slide3" id="slide3">
+            <div class="slide-text">
+                <div class="slide-text-title">
+                    Western Engineering Undergraduate Society
+                </div>
+                <div class="slide-text-description">
+                    Creating the best engineering experience possible.
+                </div>
+            </div>
+        </div>
+
+        <div class="circle-container">
+            <div class="carousel-circle" id="circle1"></div>
+            <div class="carousel-circle" id="circle2"></div>
+            <div class="carousel-circle" id="circle3"></div>
+        </div>
+
     </div>
+
+
+    <!--  -->
+
 
 
     <!-- FOOTER -->
