--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <script src="js/scripts.js"></script>
+    <script src="/js/script.js"></script>
 
     <!-- MENU -->
     <div class="menu-container">
@@ -35,8 +35,10 @@
     </div>
 
     <!-- ALERT -->
-    <div class="alert"><a href="https://www.eng.uwo.ca/Engineering-COVID-19-FAQ.html"
-            style="text-decoration: none;color:white;">Learn more about COVID-19</a><span class="close"></span></div>
+    <div class="alert" id="alert1"><a href="https://www.eng.uwo.ca/Engineering-COVID-19-FAQ.html"
+            style="text-decoration: none;color:white;">Learn more about COVID-19</a>
+        <div class="close" onclick="fadeOut(alert1)"></div>
+    </div>
 
     <!-- CAROUSEL -->
     <div class="main-carousel">
