--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 </head>
 
 <body>
-    <script src="/js/script.js"></script>
-
     <!-- MENU -->
     <div class="menu-container">
         <ol>
@@ -57,7 +55,7 @@
         <div class="slide slide2" id="slide2">
             <div class="slide-text">
                 <div class="slide-text-title">
-                    Western Engineering Undergraduate Society
+                    2
                 </div>
                 <div class="slide-text-description">
                     Creating the best engineering experience possible.
@@ -68,7 +66,7 @@
         <div class="slide slide3" id="slide3">
             <div class="slide-text">
                 <div class="slide-text-title">
-                    Western Engineering Undergraduate Society
+                    3
                 </div>
                 <div class="slide-text-description">
                     Creating the best engineering experience possible.
@@ -104,6 +102,7 @@
         </div>
     </div>
 
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
