carousel fixed and refined

--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
 
     </div>
 
-    <!-- UPCOMING EVENTS -->
     <hr class="line-break">
+
+    <!-- UPCOMING EVENTS -->
+    <div class="upcoming-events">
+        <div class="title"> Upcoming Events </div>
+        <img src="img/logo.png" class="up-event-photo">
+    </div>
 
 
     <!-- FOOTER -->
