--- a/index.html
+++ b/index.html
@@ -86,10 +86,19 @@
 
     <!-- UPCOMING EVENTS -->
     <div class="upcoming-events">
-        <div class="title"> Upcoming Events </div>
+        <div class="title up-event-title" style="text-align: left;"> Upcoming Events </div>
         <img src="img/logo.png" class="up-event-photo">
     </div>
 
+
+    <!-- MISSION -->
+    <div class="mission">
+
+        
+        <div class="mission-title"> Our Mission </div>
+
+
+    </div>
 
     <!-- FOOTER -->
     <div class="footer">
