--- a/index.html
+++ b/index.html
@@ -87,15 +87,27 @@
     <!-- UPCOMING EVENTS -->
     <div class="upcoming-events">
         <div class="title up-event-title" style="text-align: left;"> Upcoming Events </div>
-        <img src="img/logo.png" class="up-event-photo">
+        <div class="up-event-photo">
+            <div class="up-event-photo-description">Commissioner Apps</div>
+        </div>
+        <div class="up-event-photo-description">Commissioner Apps</div>
+        <div class="up-event-box event-1">
+            <div class="up-event-name">Comissioner Apps</div>
+            <div class="up-event-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum justo eget orci finibus mattis. Nulla convallis ex vitae urna auctor hendrerit. Curabitur sit amet mi sit amet urna ullamcorper ultricies ut convallis ante. Pellentesque a hendrerit metus. Quisque sodales sodales enim sit amet bibendum. Apply Now</div>
+        </div>
+        <div class="up-event-box event-2"></div>
+        <div class="up-event-box event-3"></div>
     </div>
-
 
     <!-- MISSION -->
     <div class="mission">
+        <div class="title mission-title"> Our Mission </div>
+        <div class="mission-description">
+            The Westerm UES is dedicated to helping each and every student receive a full
+            Western Engineering experience and enjoy their time here.
+            <br><a href="/about">Learn More</a>
+        </div>
 
-        
-        <div class="mission-title"> Our Mission </div>
 
 
     </div>
