home page update

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <title>Western UES</title>
     <meta name="description" content="Western UES">
     <meta name="author" content="UES">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/styles.css?v=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,9 +16,68 @@
 
 </head>
 
+
 <body>
+
+    <!-- MENU -->
+    <div class="menu-container">
+        <ol>
+            <a href="/"><img src="img/logo.png" class="menu-image"></a>
+            <div class="menu-items">
+                <li><a href="/about">About</a></li>
+                <li><a href="/events">Events</a></li>
+                <li><a href="/join">Join Us</a></li>
+                <li><a href="/store">Store</a></li>
+                <li><a href="/spaces">Spaces</a></li>
+                <li><a href="/clubs">Clubs</a></li>
+                <li>Committees</li>
+            </div>
+        </ol>
+        <div class="menu-button"></div>
+    </div>
+
+    <!-- ABOUT US -->
+    <div class="about-container">
+        <div class="about-photo"></div>
+        <div class="about-text">
+            Every student enrolled in a Bachelor of Engineering Science at Western is a member of the Undergraduate
+            Engineering Society. The UES Council exists to ensure that every society member, every Western Engineering
+            student, has the best undergraduate experience possible. This purpose is manifested in action.
+            ‍<br>
+            <br>
+            Our council is dedicated to helping each and every student receive a full Western Engineering experience and
+            enjoy their time here. We put on social events to further strengthen the community among our Engineering
+            students, providing them with small encounters that spark lifelong friendships. The UES Council supports
+            clubs where students can embrace their passions and hone true technical expertise. Discovering what you love
+            to do unlocks your potential. We also provide academic and career support. You’re enabled to perform inside
+            the classroom and change the world outside of it.
+            <br>
+            <br>
+            The UES Council is the voice of students to the Faculty of Engineering at Western. When the school’s
+            interests are aligned with the students’, progress is possible. Time and time again, it’s promised that
+            you’ll remember your university years as among the best in your life. We’re here to help keep that promise.
+        </div>
+    </div>
+
+    <!-- FOOTER -->
+    <div class="footer">
+        <div class="footer-text">
+            © Western UES 2021
+        </div>
+        <div class="footer-other">
+            <a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Public Resources</a>
+        </div>
+
+        <div class="footer-socials">
+            <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
+            <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
+            <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+        </div>
+    </div>
+
     <script src="js/scripts.js"></script>
-    
+
 
 </body>
+
 </html>
