--- a/events.html
+++ b/events.html
@@ -18,5 +18,7 @@
 <body>
     <script src="js/scripts.js"></script>
 
+    <!-- GOOGLE CALENDAR EMBED -->
+    <iframe src="https://calendar.google.com/calendar/embed?src=o9lhsdjkaktk2b8tiooqt8qahk%40group.calendar.google.com&ctz=America%2FToronto" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
