--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Western UES</title>
     <meta name="description" content="Western UES">
     <meta name="author" content="UES">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/styles.css?v=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -30,6 +31,7 @@
                 <li>Committees</li>
             </div>
         </ol>
+        <div class="menu-button"></div>
     </div>
 
     <!-- ALERT -->
@@ -55,7 +57,7 @@
         <div class="slide slide2" id="slide2">
             <div class="slide-text">
                 <div class="slide-text-title">
-                    2
+                    Photo 2
                 </div>
                 <div class="slide-text-description">
                     Creating the best engineering experience possible.
@@ -66,7 +68,7 @@
         <div class="slide slide3" id="slide3">
             <div class="slide-text">
                 <div class="slide-text-title">
-                    3
+                    Photo 3
                 </div>
                 <div class="slide-text-description">
                     Creating the best engineering experience possible.
@@ -90,26 +92,48 @@
         <div class="up-event-photo">
             <div class="up-event-photo-description">Commissioner Apps</div>
         </div>
-        <div class="up-event-photo-description">Commissioner Apps</div>
-        <div class="up-event-box event-1">
-            <div class="up-event-name">Comissioner Apps</div>
-            <div class="up-event-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum justo eget orci finibus mattis. Nulla convallis ex vitae urna auctor hendrerit. Curabitur sit amet mi sit amet urna ullamcorper ultricies ut convallis ante. Pellentesque a hendrerit metus. Quisque sodales sodales enim sit amet bibendum. Apply Now</div>
+        <div class="up-event-box-container">
+            <div class="up-event-box event-1">
+                <div class="up-event-name">Comissioner Apps</div>
+                <div class="up-event-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                    interdum justo eget orci finibus mattis. Nulla convallis ex vitae urna auctor hendrerit. Curabitur
+                    sit amet mi sit amet urna ullamcorper ultricies ut convallis ante. Pellentesque a hendrerit metus.
+                    Quisque sodales sodales enim sit amet bibendum.
+                    <a href="#" class="up-event-button">Apply Now</a>
+                </div>
+            </div>
+            <div class="up-event-box event-2">
+                <div class="up-event-name">Comissioner Apps</div>
+                <div class="up-event-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                    interdum justo eget orci finibus mattis. Nulla convallis ex vitae urna auctor hendrerit. Curabitur
+                    sit amet mi sit amet urna ullamcorper ultricies ut convallis ante. Pellentesque a hendrerit metus.
+                    Quisque sodales sodales enim sit amet bibendum.
+                    <a href="#" class="up-event-button">Apply Now</a>
+                </div>
+            </div>
+            <div class="up-event-box event-3">
+                <div class="up-event-name">Comissioner Apps</div>
+                <div class="up-event-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                    interdum justo eget orci finibus mattis. Nulla convallis ex vitae urna auctor hendrerit. Curabitur
+                    sit amet mi sit amet urna ullamcorper ultricies ut convallis ante. Pellentesque a hendrerit metus.
+                    Quisque sodales sodales enim sit amet bibendum.
+                    <a href="#" class="up-event-button">Apply Now</a>
+                </div>
+            </div>
         </div>
-        <div class="up-event-box event-2"></div>
-        <div class="up-event-box event-3"></div>
     </div>
+
+    <hr class="line-break">
 
     <!-- MISSION -->
     <div class="mission">
         <div class="title mission-title"> Our Mission </div>
         <div class="mission-description">
-            The Westerm UES is dedicated to helping each and every student receive a full
-            Western Engineering experience and enjoy their time here.
-            <br><a href="/about">Learn More</a>
+            <span class="mission-description-text">The Westerm UES is dedicated to helping each and every student
+                receive a full
+                Western Engineering experience and enjoy their time here.
+                <br><a href="/about" style="color:white;"><strong>Learn More</strong></a></span>
         </div>
-
-
-
     </div>
 
     <!-- FOOTER -->
@@ -118,13 +142,13 @@
             © Western UES 2021
         </div>
         <div class="footer-other">
-            Agreements and whatnot
+            <a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Public Resources</a>
         </div>
 
         <div class="footer-socials">
-            <img src="img/ig.png" height=20px>
-            <img src="img/fb.png" height=20px>
-            <img src="img/mail.png" height=20px>
+            <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
+            <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
+            <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
         </div>
     </div>
 
