--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/events">Events</a></li>
                 <li><a href="/join">Join Us</a></li>
-                <li><a href="/store">Store</a></li>
+                <li><a href="/shop">Store</a></li>
                 <li><a href="/spaces">Spaces</a></li>
                 <li><a href="/clubs">Clubs</a></li>
                 <li>Committees</li>
@@ -38,7 +38,9 @@
 
     <!-- ABOUT US -->
     <div class="about-container">
-        <div class="about-photo"></div>
+        <div class="about-photo">
+            <div> ABOUT US </div>
+        </div>
         <div class="about-text">
             Every student enrolled in a Bachelor of Engineering Science at Western is a member of the Undergraduate
             Engineering Society. The UES Council exists to ensure that every society member, every Western Engineering
