--- a/index.html
+++ b/index.html
@@ -28,10 +28,34 @@
                 <li><a href="/store">Store</a></li>
                 <li><a href="/spaces">Spaces</a></li>
                 <li><a href="/clubs">Clubs</a></li>
-                <li>Committees</li>
+                <li>Committees
+                    <div class="menu-dropdown" id="comittees-dropdown">
+                        <div class="dropdown-item">Wellness</div>
+                        <div class="dropdown-item">Environment</div>
+                    </div>
+                </li>
             </div>
         </ol>
-        <div class="menu-button"></div>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div class="menu-mobile-container">
+        <div class="menu-button" id="menu-button">&#8801;</div>
+        <ol class="menu-mobile-items" id="menu-mobile">
+            <li><a href="/about">About</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/join">Join Us</a></li>
+            <li><a href="/store">Store</a></li>
+            <li><a href="/spaces">Spaces</a></li>
+            <li><a href="/clubs">Clubs</a></li>
+            <li> Committees
+                <div class="mobile-dropdown">
+                    <div class="dropdown-item">Wellness</div>
+                    <div class="dropdown-item">Environment</div>
+                </div>
+            </li>
+        </ol>
+
     </div>
 
     <!-- ALERT -->
