formatting + sponsors logo

--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
 
 </head>
 
-
 <body>
 
     <!-- MENU -->
@@ -39,25 +38,104 @@
     <!-- ABOUT US -->
     <div class="about-container">
         <div class="about-photo">
-            <div> ABOUT US </div>
+            <div class="title"> ABOUT US </div>
+            <div class="text-backdrop">
+                <div class="about-text">
+                    Every student enrolled in a Bachelor of Engineering Science at Western is a member of the
+                    Undergraduate
+                    Engineering Society. The UES Council exists to ensure that every society member, every Western
+                    Engineering
+                    student, has the best undergraduate experience possible. This purpose is manifested in action.
+                    ‍<br>
+                    <br>
+                    Our council is dedicated to helping each and every student receive a full Western Engineering
+                    experience
+                    and
+                    enjoy their time here. We put on social events to further strengthen the community among our
+                    Engineering
+                    students, providing them with small encounters that spark lifelong friendships. The UES Council
+                    supports
+                    clubs where students can embrace their passions and hone true technical expertise. Discovering what
+                    you
+                    love
+                    to do unlocks your potential. We also provide academic and career support. You’re enabled to perform
+                    inside
+                    the classroom and change the world outside of it.
+                    <br>
+                    <br>
+                    The UES Council is the voice of students to the Faculty of Engineering at Western. When the school’s
+                    interests are aligned with the students’, progress is possible. Time and time again, it’s promised
+                    that
+                    you’ll remember your university years as among the best in your life. We’re here to help keep that
+                    promise.
+                </div>
+            </div>
+
         </div>
-        <div class="about-text">
-            Every student enrolled in a Bachelor of Engineering Science at Western is a member of the Undergraduate
-            Engineering Society. The UES Council exists to ensure that every society member, every Western Engineering
-            student, has the best undergraduate experience possible. This purpose is manifested in action.
-            ‍<br>
-            <br>
-            Our council is dedicated to helping each and every student receive a full Western Engineering experience and
-            enjoy their time here. We put on social events to further strengthen the community among our Engineering
-            students, providing them with small encounters that spark lifelong friendships. The UES Council supports
-            clubs where students can embrace their passions and hone true technical expertise. Discovering what you love
-            to do unlocks your potential. We also provide academic and career support. You’re enabled to perform inside
-            the classroom and change the world outside of it.
-            <br>
-            <br>
-            The UES Council is the voice of students to the Faculty of Engineering at Western. When the school’s
-            interests are aligned with the students’, progress is possible. Time and time again, it’s promised that
-            you’ll remember your university years as among the best in your life. We’re here to help keep that promise.
+
+    </div>
+
+    <hr class="line-break">
+
+    <!-- SPONSORS -->
+    <div class="sponsors-container">
+        <div class="title">Our Sponsors</div>
+        <div class="sponsor-logos">
+            
+            <img class="sponsor-pic" src="./img/sponsor/trudell.png">
+            <img class="sponsor-pic" src="./img/sponsor/ztr.png">
+            <img class="sponsor-pic" src="./img/sponsor/peo.png">
+            <img class="sponsor-pic" src="./img/sponsor/walker.png">
+            <img class="sponsor-pic" src="./img/sponsor/cornerstone.png">
+            <img class="sponsor-pic" src="./img/sponsor/maple.png">
+            <img class="sponsor-pic" src="./img/sponsor/chorleybisset.png">
+            <img class="sponsor-pic" src="./img/sponsor/londong.png">
+            <img class="sponsor-pic" src="./img/sponsor/meridian.png">
+            <img class="sponsor-pic" src="./img/sponsor/golder.png">
+            <img class="sponsor-pic" src="./img/sponsor/magna.png">
+            <img class="sponsor-pic" src="./img/sponsor/jmp.png">
+            <img class="sponsor-pic" src="./img/sponsor/gd.png">
+
+
+        </div>
+    </div>
+
+    <hr class="line-break">
+
+    <!-- FEE BREAKDOWNS -->
+    <div class="">
+        Fee Breakdown
+        <br>
+
+        Western Engineering Donation Fee
+    </div>
+
+    <hr class="line-break">
+
+    <!-- CONTACT US -->
+    <div class="contact-us">
+
+        <!-- GOOGLE MAP -->
+        <div class="ues-map">
+            <iframe height="400" id="gmap_canvas"
+                src="https://maps.google.com/maps?q=1001%20The%20University%20of%20Western%20Ontario%20London,%20Ontario,%20Canada,%20N6A%205B9&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+            </iframe>
+        </div>
+
+        <!-- EMAIL -->
+        <div class="email-container">
+            <div class="email-text">
+                <strong> General Inquiries </strong>
+                <br>
+                Email: ues.prez@uwo.ca
+                Reach other council members
+                <br>
+                <br>
+                <strong>Promotion/Social Media Inquiries </strong>
+                <br>
+                Email: ues.prez@uwo.ca & ues.vpcomm@uwo.ca
+            </div>
         </div>
     </div>
 
