about us update

--- a/about.html
+++ b/about.html
@@ -38,8 +38,13 @@
     <!-- ABOUT US -->
     <div class="about-container">
         <div class="about-photo">
-            <div class="title"> ABOUT US </div>
             <div class="text-backdrop">
+                <div class="title about-title"> 
+                    
+                    ABOUT US 
+
+                    <hr class="line-break" style="background-color:white;width:55vw;">
+                </div>
                 <div class="about-text">
                     Every student enrolled in a Bachelor of Engineering Science at Western is a member of the
                     Undergraduate
@@ -79,35 +84,35 @@
 
     <!-- SPONSORS -->
     <div class="sponsors-container">
-        <div class="title">Our Sponsors</div>
+        <div class="title">OUR SPONSORS</div>
         <div class="sponsor-logos">
-            
-            <img class="sponsor-pic" src="./img/sponsor/trudell.png">
-            <img class="sponsor-pic" src="./img/sponsor/ztr.png">
-            <img class="sponsor-pic" src="./img/sponsor/peo.png">
-            <img class="sponsor-pic" src="./img/sponsor/walker.png">
-            <img class="sponsor-pic" src="./img/sponsor/cornerstone.png">
-            <img class="sponsor-pic" src="./img/sponsor/maple.png">
-            <img class="sponsor-pic" src="./img/sponsor/chorleybisset.png">
-            <img class="sponsor-pic" src="./img/sponsor/londong.png">
-            <img class="sponsor-pic" src="./img/sponsor/meridian.png">
-            <img class="sponsor-pic" src="./img/sponsor/golder.png">
-            <img class="sponsor-pic" src="./img/sponsor/magna.png">
-            <img class="sponsor-pic" src="./img/sponsor/jmp.png">
-            <img class="sponsor-pic" src="./img/sponsor/gd.png">
-
-
+            <a href="https://www.trudellmed.com/"><img class="sponsor-pic" src="./img/sponsor/trudell.png"></a>
+            <a href="https://www.ztr.com/"><img class="sponsor-pic" src="./img/sponsor/ztr.png"></a>
+            <a href="https://www.peo.on.ca/"><img class="sponsor-pic" src="./img/sponsor/peo.png"></a>
+            <a href="https://www.walkerind.com/"><img class="sponsor-pic" src="./img/sponsor/walker.png"></a>
+            <a href="http://www.cornerstonearchitecture.ca/"><img class="sponsor-pic" src="./img/sponsor/cornerstone.png"></a>
+            <a href="https://www.maplesoft.com/"><img class="sponsor-pic" src="./img/sponsor/maple.png"></a>
+            <a href="https://chorley.com/"><img class="sponsor-pic" src="./img/sponsor/chorleybisset.png"></a>
+            <a href="https://london.ca/"><img class="sponsor-pic" src="./img/sponsor/londong.png"></a>
+            <a href="http://www.meridian-mag.com/"><img class="sponsor-pic" src="./img/sponsor/meridian.png"></a>
+            <a href="https://www.golder.com/"><img class="sponsor-pic" src="./img/sponsor/golder.png"></a>
+            <a href="https://www.magna.com/"><img class="sponsor-pic" src="./img/sponsor/magna.png"></a>
+            <a href="https://www.jmpsolutions.com/"><img class="sponsor-pic" src="./img/sponsor/jmp.png"></a>
+            <a href="https://www.gd.com/"><img class="sponsor-pic" src="./img/sponsor/gd.png"></a>
         </div>
     </div>
 
     <hr class="line-break">
 
     <!-- FEE BREAKDOWNS -->
-    <div class="">
-        Fee Breakdown
+    <div class="fee-breakdown">
+        <div class="title">Fee Breakdown</div>
         <br>
 
         Western Engineering Donation Fee
+        <div class="pie-container">
+            <div class="pie"></div>
+        </div>
     </div>
 
     <hr class="line-break">
@@ -149,9 +154,10 @@
         </div>
 
         <div class="footer-socials">
+            <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
             <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
             <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
-            <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+            <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
         </div>
     </div>
 
