--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/styles.css?v=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -75,12 +74,14 @@
                     promise.
                 </div>
             </div>
-
         </div>
-
     </div>
 
-    <hr class="line-break">
+    <!-- CULTURES AND TRADITIONS -->
+    <div class="culture-container">
+        <div class="title">CULTURES & TRADITIONS</div>
+        
+    </div>
 
     <!-- SPONSORS -->
     <div class="sponsors-container">
@@ -109,9 +110,17 @@
         <div class="title">Fee Breakdown</div>
         <br>
 
-        Western Engineering Donation Fee
+        Western Engineering Donation Fee: 
+        <br>
+        There is a $150.00 Western Engineering Donation that you and every other undergraduate engineering student can make in addition to your tuition. This is an important donation that goes toward a variety of services and funds built for the betterment of your student experience
         <div class="pie-container">
-            <div class="pie"></div>
+            <div class="pie-chart">
+                <div class="circle"></div>
+                <div class="pie-ues"></div>
+                <div class="pie-project"></div>
+                <div class="pie-lab"></div>
+                <div class="circle-white"></div>
+            </div>
         </div>
     </div>
 
