--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         </div>
 
         <div class="footer-socials">
+            <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
             <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
             <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
             <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
