--- a/join.html
+++ b/join.html
@@ -16,6 +16,42 @@
 </head>
 
 <body>
+    <!-- MENU -->
+    <div class="menu-container">
+        <ol>
+            <a href="/"><img src="img/logo.png" class="menu-image"></a>
+            <div class="menu-items">
+                <li><a href="/about">About</a></li>
+                <li><a href="/events">Events</a></li>
+                <li><a href="/join">Join Us</a></li>
+                <li><a href="/shop">Store</a></li>
+                <li><a href="/spaces">Spaces</a></li>
+                <li><a href="/clubs">Clubs</a></li>
+                <li>Committees</li>
+            </div>
+        </ol>
+        <div class="menu-button"></div>
+    </div>
+
+    
+
+    <!-- FOOTER -->
+    <div class="footer">
+        <div class="footer-text">
+            © Western UES 2021
+        </div>
+        <div class="footer-other">
+            <a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Public Resources</a>
+        </div>
+
+        <div class="footer-socials">
+            <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
+            <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
+            <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
+            <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+        </div>
+    </div>
+
     <script src="js/scripts.js"></script>
 
 </body>
